Update StreamingReaderTest.java